@@ -10,6 +10,8 @@
 
     Added xml::node::clear() method.
 
+    Better error reporting when xml::tree_parser input file doesn't exist.
+
 Version 0.6.2
 
     Fixed xml::tree_parser to fail on non-fatal parser errors.
